Fix: fixed overflow issues and changed color scheme to dark

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,7 @@
 
 /* Default styling */
 body {
+    color-scheme: dark;
     background: var(--color-background);
     color: var(--color-text);
     font-family: Arial, Helvetica, sans-serif;
